# concurrent-word-validator

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  run.c  test_multiple_inputs.sh  tester.c  unpack.sh  validator.c  word_validate_all.sh  word_validate_fails.sh
experiments/: struct_memory_alloc_test.c
large_examples/: README.md  extreme.rb  fullstring_tester.in  fullstring_tester.out  fullstring_validator.out  maxautom_long_tester_multibangs.in  maxautom_long_tester_nobang.in  maxautom_long_tester_onebang.in  maxautom_long_validator.in  maxautom_tester.in  maxautom_tester.out  maxautom_validator.out  multi_fullstring_tester.in  multi_fullstring_tester.out  multi_fullstring_validator.out
original_examples/: tester1.in  tester1.out  tester2.out  tester3.in  tester4.in  tester4.out  validator1.in  validator1.out  validator2.in  validator3.in  validator4.in  validator4.out
src/: automaton.c  automaton.h  config.c  config.h  err.c  pid_list.c  pid_list.h  request_queue.c  request_queue.h  response_queue.c  response_queue.h  run.c  tester.c  tester_list.c  tester_list.h  tester_mq.c  tester_mq.h  validator.c  validator_mq.c  validator_mq.h  validator_queues.c  validator_queues.h
test/: async_func_sig_return_test.c  casting_to_argv_test.c  exec_wait_return_test.c  fork_reader_sender_test.c  mq_sandbox.c  parallel_word_validation_test.c  pipe_cpy_test.c  pipe_cpy_test_2.c  pipe_cpy_test_child.c  pipe_cpy_test_child_2.c  seq_word_validation_test.c  struct_memory_alloc_test.c  tester_mq_test.c  validator_mq_test.c
test_data/: test1.in  test2.in  test3.in  test4.in
